--- a/Source/pubspec.yaml
+++ b/Source/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker:
+  image_picker: ^0.8.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
