--- a/Source/android/app/src/main/AndroidManifest.xml
+++ b/Source/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.mitutoyo.learnhub">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="learnhub"
         android:name="${applicationName}"
