--- a/Source/pubspec.yaml
+++ b/Source/pubspec.yaml
@@ -45,11 +45,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-
+  flutter_launcher_icons: "^0.10.0"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/LearnhubIcon.png"
 flutter:
 
   # The following line ensures that the Material Icons font is
