--- a/Source/pubspec.yaml
+++ b/Source/pubspec.yaml
@@ -34,8 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # To save as json
+  # Run `flutter pub run build_runner build --delete-conflicting-outputs`
+  # if you run into trouble with *.g.dart files. See
+  # https://docs.flutter.dev/development/data-and-backend/json#one-time-code-generation
+  # for help.
+  json_annotation: ^4.7.0
+  path_provider: ^2.0.11
+  # for UUIDs
+  uuid: ^3.0.6
+
   image_picker: ^0.8.6
   http: ^0.13.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,7 +57,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
+
+  # To save as json
+  build_runner: ^2.3.2
+  json_serializable: ^6.5.3
+
   flutter_launcher_icons: "^0.10.0"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
