--- a/Source/pubspec.yaml
+++ b/Source/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
   assets:
      - assets/images/Logo.png
      - assets/images/Feuerwerk.png
+     - assets/images/Pokal.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
